# mas-a2a

./: .gitignore  README.md
google_adk/birthday_planner/: pyproject.toml
google_adk/calendar_agent/: pyproject.toml
google_adk/code_interpreter_agent/: README.md  __main__.py  adk_agent.py  adk_agent_executor.py  cli_client.py  pyproject.toml  test_client.py
google_adk/french_translation_agent/: README.md  __main__.py  adk_agent.py  adk_agent_executor.py  pyproject.toml
google_adk/mcp_brave_search_agent/: README.md  __main__.py  adk_agent.py  adk_agent_executor.py  cli_client.py  pyproject.toml  test_client.py
google_adk/search_agent/: README.md  __main__.py  adk_agent.py  adk_agent_executor.py  cli_client.py  pyproject.toml  test_client.py
google_adk/spanish_translation_agent/: README.md  __main__.py  adk_agent.py  adk_agent_executor.py  pyproject.toml
google_adk/translation_orchestrator_agent/: README.md  __main__.py  a2a_translation_tools.py  adk_agent.py  adk_agent_executor.py  cli_client.py  pyproject.toml
